...
                    screenModel.onEmailChange(it.text)
                },
                isError = hasAt && !isValidEmail,
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Email),
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("email_text_field")
                    .padding(start = 8.dp, end = 8.dp),
                textStyle = MaterialTheme.typography.labelMedium,
            )
            if (hasAt && !isValidEmail) {
                Text(
                    text = stringResource(R.string.type_a_valid_email),
...
                Button(
                    onClick = {
                        screenModel.onStartClick()
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("start_button"),
                    enabled = hasAt && isValidEmail
                ) {
                    Text(
                        text = stringResource(R.string.start),
                        style = MaterialTheme.typography.labelMedium
                    )
...
