...
                    .padding(paddingValues)
                    .padding(16.dp)
            ) {
                Text(
                    text = stringResource(R.string.create_a_new_account),
                    style = MaterialTheme.typography.titleLarge,
                    modifier = Modifier.testTag("signup_screen_title")
                )
                Text(
                    text = buildAnnotatedString {
                        append(stringResource(R.string.with_your_account))
                        withStyle(style = SpanStyle(fontWeight = FontWeight.Bold)) {
                            append(email)
...
